@@ -1,5 +1,7 @@
 # This file is updated automatically by Makefile.
 glibc-branch := fedora
 glibc-base := HEAD
-fedora-sync-date := 2005-07-21 08:14 UTC
-fedora-sync-tag := fedora-glibc-20050721T0814
+DIST_BRANCH := devel
+COLLECTION := dist-fc4
+fedora-sync-date := 2005-07-22 04:33 UTC
+fedora-sync-tag := fedora-glibc-20050722T0433
