@@ -22,6 +22,7 @@
 #include <stdarg.h>
 #include <stdio.h>
 #include <wchar.h>
+#include <string.h>
 
 
 int
