@@ -22,7 +22,7 @@
 subdir	:= stdlib
 
 headers	:= stdlib.h alloca.h monetary.h fmtmsg.h ucontext.h sys/ucontext.h    \
-	   inttypes.h stdint.h bits/wordsize.h bits/wchar.h		      \
+	   inttypes.h stdint.h bits/wordsize.h				      \
 	   errno.h sys/errno.h bits/errno.h bits/stdlib.h
 
 routines	:=							      \
