@@ -1,4 +1,4 @@
-# Copyright (C) 1995-2000, 2002, 2003, 2004 Free Software Foundation, Inc.
+# Copyright (C) 1995-2000,2002,2003,2004,2005 Free Software Foundation, Inc.
 # This file is part of the GNU C Library.
 
 # The GNU C Library is free software; you can redistribute it and/or
@@ -21,7 +21,7 @@
 #
 subdir	:= wcsmbs
 
-headers	:= wchar.h
+headers	:= wchar.h bits/wchar.h bits/wchar2.h
 distribute := wcwidth.h wcsmbsload.h
 
 routines := wcscat wcschr wcscmp wcscpy wcscspn wcsdup wcslen wcsncat \
